<resources>
    <string name="app_name">AndyMouse</string>
    <string name="title">Andy Mouse</string>
    <string name="ip_address">Enter IP Address</string>
    <string name="zero">0.00</string>
    <string name="x_tilt">X-Tilt</string>
    <string name="y_tilt">Y-Tilt</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="left_click">Left Click</string>
    <string name="right_click">Right Click</string>
    <string name="password">Enter Password</string>
    <string name="connect">Connect</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="touchpad">Touchpad</string>
</resources>
